# dgbir

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rustfmt.toml
.github/workflows/: build-and-test.yml  ci.yml
src/: abi.rs  compiler.rs  compiler_aarch64.rs  compiler_x64.rs  disassembler.rs  ir.rs  ir_interpreter.rs  ir_tostring.rs  lib.rs  main.rs  parser.rs  reg_pool.rs  register_allocator.rs  util.rs
src/ir/: ir_display.rs  ir_emitters.rs
tests/: compiler_tests.rs  ir_interpreter_tests.rs
