[package]
name = "dgbir"
version = "0.1.0"
edition = "2021"

[features]
default = []
asm_debug = []
ir_comments = []

[dependencies]
capstone = "0.13.0"
dynasmrt = "4.0.1"
env_logger = "0.11.8"
itertools = "0.14.0"
log = "0.4.28"
nom = "8.0.0"
nom-language = "0.1.0"
ordered-float = "5.1.0"
petgraph = "0.8.3"
